# h3netprotocol-client

./: CONTRIBUTING.md  NOTICE  README.md
.github/: FUNDING.yml
go/pkg/: .openapi-generator-ignore  README.md  api_acl.go  api_config.go  api_core.go  api_discovery.go  api_events.go  api_operations.go  api_pipeline.go  api_routing.go  api_security.go  api_switch.go  api_telemetry.go  (+160 more)
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/api/: mod.rs
rust/src/error/: mod.rs
rust/src/models/: acl.rs  acl_action.rs  acl_action_logging.rs  acl_action_ratelimit.rs  acl_action_redirect.rs  acl_all_of_statistics.rs  acl_match.rs  acl_rule.rs  admin_state.rs  base_error_response.rs  base_message.rs  base_request.rs  base_response.rs  bgp.rs  bgp_neighbor.rs  bgp_neighbor_timers.rs  capabilities.rs  capabilities_hardware_capabilities.rs  capability_query_response.rs  capability_query_response_all_of_constraints.rs  capability_request_message.rs  create_acl_request.rs  create_flow_request.rs  create_match_action_table_request.rs  create_or_update_device_request.rs  device.rs  device_config_update_message.rs  device_config_update_message_all_of_config.rs  device_config_update_message_all_of_config_interfaces.rs  device_info_request.rs  device_info_response.rs  device_metrics.rs  device_operational_state.rs  device_role_enum.rs  device_settings.rs  device_settings_dns_settings.rs  device_settings_ntp_servers_inner.rs  device_statistics.rs  device_statistics_optical_stats.rs  device_statistics_rate_stats.rs  (+115 more)
rust/src/transport/: mod.rs
schemas/: h3netschema.json  h3netschema.yaml
(+8 files in other folders)
