[package]
name = "h3netprotocol-client"
version = "0.1.0"
edition = "2021"
description = "H3Net Protocol Rust Client"
license = "Apache-2.0"
repository = "https://github.com/switchnomix/h3netprotocol-client"
documentation = "https://h3net.switchnomix.com/api"
homepage = "https://github.com/switchnomix/h3netprotocol-client"
keywords = ["h3net", "protocol", "webtransport", "http3", "network"]
categories = ["network-programming", "protocols"]
support = { email = "h3netprotocol@googlegroups.com" }

[dependencies]
tokio = { version = "1.36", features = ["full"] }
webtransport-quinn = "0.1"
quinn = "0.10"
h3 = "0.0.4"
h3-quinn = "0.0.4"
bytes = "1.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
